[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/other/Door.gd" type="Script" id=1]
[ext_resource path="res://assets/dungeonAssets/dungeon-0-Door_Wooden_Lock.vox" type="ArrayMesh" id=2]
[ext_resource path="res://assets/dungeonAssets/dungeon-1-Door_Wooden.vox" type="ArrayMesh" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 10, 1 )

[sub_resource type="BoxShape" id=2]

[node name="Door" type="Spatial"]
script = ExtResource( 1 )

[node name="Door_Wooden" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = null

[node name="Door_Wooden_Lock" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Door_Wooden_Lock"]

[node name="CollisionShape" type="CollisionShape" parent="Door_Wooden_Lock/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, -0.5 )
shape = SubResource( 1 )

[node name="Area Detection" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area Detection"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area Detection" to="." method="_on_Area_Detection_body_entered"]
[connection signal="body_exited" from="Area Detection" to="." method="_on_Area_Detection_body_exited"]
